Thu Jul 19 14:56:33 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkaccellabel.c (gtk_accel_label_class_init) 
	* gtk/gtkinputdialog.c (gtk_input_dialog_set_key):
	Use Shift/Ctrl instead of Shft/Ctl. (#53807)

Thu Jul 19 11:41:00 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkcolorsel.c: Add propery support (roughly
	based on patch from Lee Mallabone, #51014)

	* gtk/gtkcolorsel.h: Mark gtk_color_selection_set_update_policy as
	deprecated, since we already g_warning() on it.

Thu Jul 19 14:24:34 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkentry.c (gtk_entry_set_positions): Fix
	typo that sometimes caused selection not to work properly.

	* gtk/gtkentry.c (gtk_entry_grab_focus): Select text in
	entry when tabbing in. (#57743)
	
	* gtk/gtkentry.c (gtk_entry_motion_notify): If the
	user drags up above or down below the entry, move
	to the end or the beginning of the entry. (Suggestion
	from Jay Cox, #50940)

	* gtk/gtkentry.c (gtk_entry_move_cursor): If we have
	a current selection, then when moving by chars or
	words, move to the end of the selection rather than
	from entry->current_pos. (Suggestion from Jay Cox,
	#50942)
	
Thu Jul 19 12:14:28 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwindow.c (gtk_window_set_decorated): Actualy
	set window->decorated. (Patch from Hidetoshi Tajima,
	#55846)

Sat Jul  7 02:50:14 2001  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtkwidget.c (gtk_widget_set_parent): Enforce
	the widget/child realization/mapping invariants.

	* gtk/gtkwidget.[ch] gtk/gtkprivate.h: Add functions 
	gtk_widget_[get/set]_child_visible() to control
	whether visible children of a mapped window are
	mapped.

	* docs/widget_system.txt: Updated for changes in
	container contract, and addition of GTK_CHILD_VISIBLE.

	* gtk/gtkcontainer.c: Add generic map()/unmap()
	functions that work for almost all containers.

	* gtk/gtknotebook.c gtk/gtkpacker.c: Use 
	gtk_widget_set_child_visible() where necessary.
