@@ -264,13 +264,3 @@ according to its update policy.
 
 </para>
 
-<!-- ##### ARG GtkColorSelection:previous-color ##### -->
-<para>
-
-</para>
-
-<!-- ##### ARG GtkColorSelection:previous-alpha ##### -->
-<para>
-
-</para>
-
